<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "WhereDat"><!ENTITY author "Oded">]>
<resources>
    <string name="app_name">VolunTour</string>

    <!--navbar strings-->
    <string name="mainNav">Sign Out</string>
    <string name="profileNav">Organization Profile</string>
    <string name="eventNav">Create Event</string>
    <string name="searchNav">Search</string>
    <string name="main2Nav">Main2</string>
    <string name="main3Nav">Main3</string>
    <string name="shareNav">Share</string>


    <!--main strings-->
    <string name="main">Main/Home/Login</string>


    <!-- location-->
    <string name="allowLocation">Please allow access to your location.</string>
    <string name="allowLocationButton">Allow access to this device\'s location</string>
    <string name="locationServices">Please turn on your location services.</string>
    <string name="locationServicesButton">Turn on location services</string>

    <!-- /location-->


    <!-- /main strings-->


    <!-- general strings -->
    <string name="iAmNotARobot">I am not a robot</string>
    <string name="TermsAndConditions">I have read and agree to the privacy policy and terms and conditions of this app</string>
    <string name="search">Search</string>
    <string name="searchBarInput">type keyword here</string>
    <string name="seeMoreButton">See More</string>
    <string name="description">Description:</string>
    <string name="colon">:</string>
    <string name="organization_toEvent">Go to Create Event</string>
    <string name="Organization_toProfile">Go to Organization Profile</string>
    <string name="saveButton">Save</string>

    <!-- /general strings -->


    <!-- organization profile setup -->
    <string name="organization_profileStr">Organization Profile Setup</string>
    <string name="organization_nameStr">Please enter the name of your organization.</string>
    <string name="organization_emailStr">Please enter the email of your organization.</string>
    <string name="head_emailStr">Please enter the email of the head of your organization.</string>
    <string name="organization_phoneStr">Please enter the phone number of your organization.</string>
    <string name="head_phoneStr">Please enter the phone number of the head of your organization.</string>
    <string name="organization_licenseStr">Please submit your organization\'s license</string>
    <string name="organization_locationStr">Please enter your organization\'s zip code.</string>
    <string name="organization_usernameStr">Please enter your organization\'s username.</string>
    <string name="organization_passwordStr">Please enter your organization\'s password.</string>
    <string name="organization_passwordConfirmStr">Please confirm your organization\'s password.</string>
    <string name="ContinueFromOrganizationProfileSetup">Continue</string>

    <string name="nameExample">e.g. VolounTour</string>
    <string name="emailExample">e.g. VolunTour@gmail.com</string>
    <string name="phoneExample">e.g. 0123456789</string>
    <string name="zipCodeExample">e.g. 12345</string>


    <!-- /organization profile setup-->


    <!-- volunteer search -->
    <string name="volunteer_recommendedOrganizations">Recommended Organizations</string>
    <string name="volunteer_history">History</string>
    <string name="volunteer_organizationOneShortDesc">[description of 1st organization]</string>
    <string name="volunteer_organizationTwoShortDesc">[description of 2nd organization]</string>
    <string name="volunteer_organizationThreeShortDesc">[description of 3rd organization]</string>
    <string name="volunteer_organizationFourShortDesc">[description of 4th organization]</string>
    <!-- /volunteer search -->

    <!-- organization create event-->
    <string name="organization_createEvent">Create Event</string>
    <string name="organization_eventName">Event Name:</string>
    <string name="organization_eventLocation">Event Location:</string>
    <string name="organization_timeFrom">Time from:</string>
    <string name="organization_timeTo">Time to:</string>
    <string name="organization_typeOfEvent">Event Type:</string>
    <string name="organization_skillsRequired">Skills Required:</string>
    <string name="organization_interestFields">Interest Fields:</string>
    <string name="organization_enterDescription">Input Organization Description Below</string>

    <!-- skills required -->
    <string-array name="skillsRequiredDropdown">
        <item>N/A</item>
        <item>requirementTwo</item>
        <item>requirementThree</item>
        <item>requirementFour</item>
    </string-array>
    <!-- /skills required -->

    <!-- interest fields -->
    <string-array name="interestFieldsDropdown">
        <item>N/A</item>
        <item>requirementTwo</item>
        <item>requirementThree</item>
        <item>requirementFour</item>
    </string-array>
    <!-- /interest fields -->

    <!-- event type -->
    <string-array name="eventTypeDropdown">
        <item>N/A</item>
        <item>requirementTwo</item>
        <item>requirementThree</item>
        <item>requirementFour</item>
    </string-array>
    <!-- /event type -->

    <!-- hours -->
    <string name="hoursDesc">Enter the hour.</string>
    <string-array name="hoursDropdown">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!-- /hours -->


    <!-- Am Pm -->
    <string name="AmPmDesc">Enter the time of day.</string>

    <string-array name="AmPmDropdown">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <!-- /Am Pm -->

    <!-- minutes -->
    <string name="minutesDesc">Enter the minutes.</string>
    <string-array name="minutesDropdown">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <!-- /minutes -->

    <!-- /organization create event -->

    <!-- navigation bar attempt -->

    <!-- /navigation bar attempt -->


    <!-- kweku's strings-->
    <string name="welcome_desc">Welcome to VolunTour, an app for connecting volunteers and local organizations!</string>
    <string name="welcome_prompt">Lets get started: </string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="guest">Continue as guest</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_message">
       <!-- <![CDATA[


                Demonstration of using RecyclerView with a LinearLayoutManager and GridLayoutManager
                to create a vertical list. Tap \"SHOW LOG\" to view elements as they are bound to
                their ViewHolder. The log also displays elements that you tap.


        ]]>-->
    </string>
    <!-- /kweku's strings-->
    <string name="sample_company_text">This is a company</string>
    <string name="title_activity_reccomend_organizations">ReccomendOrganizations</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="user_preferences_map">User Preferences</string>
    <string name="empty_string" />
    <string name="volunteer_home_page_header">Recommended Activities</string>
    <string name="organization_home_page_header">Manage Your Activities</string>
</resources>