<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/mainNav">


        </item>
        <item android:id="@+id/nav_profileDrawer"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profileNav">
        </item>
        <item android:id="@+id/nav_eventDrawer"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/eventNav">

        </item>
        <item android:id="@+id/nav_volunteerSearchDrawer"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search">

        </item>

        <item android:id="@+id/nav_main2Drawer"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/main2Nav">

        </item>
        <item android:id="@+id/nav_main3Drawer"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/main3Nav">

        </item>

    </group>


    <group android:checkableBehavior="single"
     android:id="@+id/group2">
        <!--  <item android:id="@+id/nav_Policy"
             android:icon="@drawable/ic_baseline_policy_24"
             android:title="Privacy Policy">
         </item>
         -->
        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/shareNav">
        </item>
    </group>

</menu>