<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/guestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest" />

        <TextView
            android:id="@+id/welcomePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_prompt" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/welcomeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/welcome_desc" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>