<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/SearchDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7FFFFFF"
    android:fitsSystemWindows="true"
    android:minWidth="19dp"
    tools:context=".volunteerSearch">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F7FFFFFF">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7FFFFFF"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7FFFFFF"
                app:subtitleTextColor="#0A0A0A"
                app:titleTextColor="#111111" />


            <LinearLayout
                android:id="@+id/mostOfSearchBodyLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/searchTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/searchBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/searchBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/searchBarInput"
                            android:layout_width="342dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/searchBarInput" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/searchIcon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_search_category_default"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <TextView
                    android:id="@+id/recommendedOrganizations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volunteer_recommendedOrganizations"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/organizationOneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/organizationOneDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/volunteer_organizationOneShortDesc" />

                    <ImageButton
                        android:id="@+id/emailButtonOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/sym_action_email"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/organizationTwoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/organizationTwoDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/volunteer_organizationTwoShortDesc" />

                    <ImageButton
                        android:id="@+id/emailButtonTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/sym_action_email"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <TextView
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volunteer_history"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/organizationThreeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/organizationThreeDesc"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/volunteer_organizationThreeShortDesc" />

                    <ImageButton
                        android:id="@+id/emailButtonThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/sym_action_email"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/organizationFourLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/organizationFourDesc"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/volunteer_organizationFourShortDesc" />

                    <ImageButton
                        android:id="@+id/emailButtonFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/sym_action_email"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <Button
                    android:id="@+id/seeMoreButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="150dp"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/seeMoreButton" />
            </LinearLayout>
            <!-- /my code-->
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
